# AWS_Bedrock_Agentcore

./: README.md  index.html  main.py  pyproject.toml  register_mcp.py
experiment/: Human_Immune_System_Presentation.pptx  Immune_System_Presentation.pptx  Python_Programming_Presentation.pptx  RAG_Agent_Notebook.ipynb  agent_generated_bedrock_overview.pptx  nova_inference.ipynb  ppt_agent.ipynb
experiment/skills/ppt_design/: SKILL.md
rag_agent/: README.md  agent.py  config.py  main.py  tools.py  vector_store.py
rag_agent_agentcore/: main.py  requirements.txt
rag_agent_agentcore_memory/: agent.py  config.py  main.py  middleware.py  requirements.txt  tools.py
