[project]
name = "aws-bedrock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.10",
    "langchain-aws>=1.6.0",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.6",
    "nest-asyncio>=1.6.0",
    "python-pptx>=1.0.2",
    "rich>=15.0.0",
    "bedrock-agentcore>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "bedrock-agentcore-starter-toolkit>=0.3.9",
    "langgraph-checkpoint-aws>=1.0.0",
    "boto3>=1.43.34",
]
